# animated-dollop

./: Cargo.toml  build_commands.txt  eval.txt  pyproject.toml  serve.py  test.py
my_ui/: README.md  angular.json  extra-webpack.config-witch-cargo.js  extra-webpack.config.js  package-lock.json  package.json
my_ui/src/: index.html
my_ui/src/app/: app.component.spec.ts  app.component.ts
src/: lib.rs  myimpl.rs
