[package]
name = "multilang_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "multilang_playground"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.19.0", features=["macros"]}
wasm-bindgen = {version="0.2.90"}
